# trinity

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ADAPTER_AUTHORING_GUIDE.md  BRAIN.md  CANDIDATE_LIFECYCLE_CONTRACT.md  CLI_REFERENCE.md  CODING_STANDARDS.md  CONTROL_PLANE_SEAM.md  CROSS_PROJECT_MEMORY_BOUNDARIES.md  DEFINITION_OF_DONE.md  DESIGN_SYSTEM.md  EVIDENCE_INGESTION_CONTRACT.md  EXECUTION_BACKLOG.md  GOBII_NORMALIZATION_CONTRACT.md  GOBII_PROFILE_ENRICHMENT_WORKFLOW.md  GOBII_RECURRING_WORKFLOW.md  HANDOVER.md  HITL_ESCALATION_CONTRACT.md  IMPACT_PRODUCT_ADAPTER_CONTRACT.md  INTEGRATING_NEW_APP.md  LIVE_BRAIN_RUNTIME_ARCHITECTURE.md  LOCAL_INSTALL.md  MACOS_DEVELOPMENT.md  MEMORY_ARCHITECTURE.md  MINORITY_REPORT_CONTRACT.md  OPENMYTHOS_DESIGN_MIRROR.md  OPERATING_MODEL.md  POLICY_LOOP_REPO_BREAKDOWN.md  PRODUCTION_TRACE_EVAL_DATASETS.md  PROVIDER_COMPARISON_HARNESS.md  REPLY_PRODUCT_ADAPTER_CONTRACT.md  REPLY_TRINITY_INTEGRATION_CHECKLIST.md  REPLY_TRINITY_TRAIN_OPERATING_CONTRACT.md  REPOSITORY_CONTRACT.md  RUNTIME_STORAGE_POLICY.md  SCORING_ARCHITECTURE_NOTE.md  STAGE_EXECUTION_CONTRACT.md  STATUS.md  TECH_STACK.md  THIRD_APP_PREPARATION_PLAN.md  TRAIN_PROMOTION_SOLUTION.md  TRINITY_CORE_LOOP.md  (+4 more)
tests/: conftest.py  test_adapter_runtime.py  test_candidate_lifecycle.py  test_control_plane.py  test_eval_datasets.py  test_evidence_ingestion.py  test_feedback_memory.py  test_frontier_selection.py  test_gobii_client.py  test_gobii_enrichment.py  test_gobii_normalization.py  test_gobii_tasks.py  test_gobii_workflows.py  (+21 more)
(+79 files in other folders)
